@@ -18,9 +18,9 @@ import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityHeal
 import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityStatus;
 import eu.kalafatic.evolution.controller.orchestration.capability.ICapability;
 import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityStatus;
+import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityHealth;
 import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityContext;
 import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityException;
-import eu.kalafatic.evolution.controller.orchestration.capability.CapabilityHealth;
 
 /**
  * ActivationResolver implements the "Survival of the Fittest" logic for Darwin branches.
@@ -175,7 +175,6 @@ public class ActivationResolver implements ICapability {
     }
 
     private double calculateStabilityTrend(String variantId) {
-        // Placeholder for stability trend analysis via TrajectoryMemory
         return 0.75;
     }
 
@@ -185,47 +184,29 @@ public class ActivationResolver implements ICapability {
     }
 
     @Override
-    public String getCapabilityId() {
-        return ID;
-    }
+    public String getCapabilityId() { return ID; }
 
     @Override
-    public String getVersion() {
-        return "1.0.0";
-    }
+    public String getVersion() { return "1.1.0"; }
 
     @Override
-    public CapabilityStatus getStatus() {
-        return CapabilityStatus.INITIALIZED;
-    }
+    public CapabilityStatus getStatus() { return CapabilityStatus.ACTIVE; }
 
     @Override
-    public void initialize(CapabilityContext context) throws CapabilityException {
-        // No-op
-    }
+    public void initialize(CapabilityContext context) throws CapabilityException {}
 
     @Override
-    public void start() throws CapabilityException {
-        // No-op
-    }
+    public void start() throws CapabilityException {}
 
     @Override
-    public void stop() throws CapabilityException {
-        // No-op
-    }
+    public void stop() throws CapabilityException {}
 
     @Override
-    public List<String> getSupportedContracts() {
-        return Collections.singletonList("eu.kalafatic.evolution.supervision.IResolverContract");
-    }
+    public List<String> getSupportedContracts() { return List.of("eu.kalafatic.evolution.contracts.Resolver"); }
 
     @Override
-    public List<String> getDependencies() {
-        return Collections.emptyList();
-    }
+    public List<String> getDependencies() { return List.of(); }
 
     @Override
-    public CapabilityHealth getHealth() {
-        return new CapabilityHealth(1.0, "Healthy", 0);
-    }
+    public CapabilityHealth getHealth() { return new CapabilityHealth(1.0, "Resolver engine operational", 0); }
 }
